--- a/AI_LLM/RAG/RAG-Cancer/requirements.txt
+++ b/AI_LLM/RAG/RAG-Cancer/requirements.txt
@@ -3,7 +3,7 @@ langchain
 langchain-community
 langchain-google-genai
 langchain-huggingface
-chromadb
+chromadb==0.4.15
 pypdf
 python-dotenv
 sentence-transformers
